--- a/yazi.toml
+++ b/yazi.toml
@@ -15,30 +15,30 @@ cache_dir  = "/Users/szz/Library/Caches/yazi"
 
 [opener]
 folder = [
-	{ exec = 'open -R "$@"', desc = "Reveal in Finder" },
-	{ exec = '$EDITOR "$@"' },
+	{ run = 'open -R "$@"', desc = "Reveal in Finder" },
+	{ run = '$EDITOR "$@"' },
 ]
 archive = [
-	{ exec = 'unar "$1"', desc = "Extract here" },
+	{ run = 'unar "$1"', desc = "Extract here" },
 ]
 text = [
-	{ exec = '$EDITOR "$@"', block = true },
+	{ run = '$EDITOR "$@"', block = true },
 ]
 image = [
-	{ exec = 'open "$@"', desc = "Open" },
-	{ exec = '''exiftool "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show EXIF" },
+	{ run = 'open "$@"', desc = "Open" },
+	{ run = '''exiftool "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show EXIF" },
 ]
 video = [
-	{ exec = 'mpv "$@"' },
-	{ exec = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info" },
+	{ run = 'mpv "$@"' },
+	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info" },
 ]
 audio = [
-	{ exec = 'mpv "$@"' },
-	{ exec = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info" },
+	{ run = 'mpv "$@"' },
+	{ run = '''mediainfo "$1"; echo "Press enter to exit"; read''', block = true, desc = "Show media info" },
 ]
 fallback = [
-	{ exec = 'open "$@"', desc = "Open" },
-	{ exec = 'open -R "$@"', desc = "Reveal in Finder" },
+	{ run = 'open "$@"', desc = "Open" },
+	{ run = 'open -R "$@"', desc = "Reveal in Finder" },
 ]
 
 [open]
